--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
       <h1 class="invitation__title section__title">You're invited</h1>
       <div class="invitation__text-container">
         <p class="invitation__main-paragraph main-paragraph">
-          Неон. Басы. Блики. Танец. <br> Это - атмосфера раскрепощенности, свободы ума и тела. Это - свобода мысли,
-          свобода движения. Это - твои друзья и близкие. Это - именно то, что тебе нужно.</p>
+          Никита и Ангелина  <br> Приглашаем вас  на наше торжество.</p>
       </div>
-      <button class="invitation__im-in-button im-in-button">I'm in!</button>
-      <p class="invitation__main-paragraph main-paragraph">В ночь с 9 на 10 июля ты сможешь отдаться ритамам synthwave,
+
+      <p class="invitation__main-paragraph main-paragraph">В ночь с 28 на 10 июля ты сможешь отдаться ритамам synthwave,
         techno и new wave, попробовать авторские коктейли от Anthony Davydoff, встретить старых знакомых и узнать о себе
         больше.</p>
     </section>
@@ -79,29 +78,5 @@
 
     </section>
   </main>
-  <footer class="footer">
-    <p class="footer__copyrights">&copy;2022. Veronica Paist</p>
-  </footer>
-  <div class="popup popup__hidden">
-    <div class="popup__container">
-      <button class="popup__close-button"></button>
-      <div class="form__container">
-        <h3 class="form__title">Заполни форму</h3>
-        <h4 class="form__subtitle">и мы свяжемся с тобой</h4>
-        <form method="post" class="form" novalidate>
-          <input type="text" class="form__input" name="name" placeholder="Имя" minlength="2" maxlength="25" required>
-          <span class="form__error-text name-input-text">Ошибка</span>
-          <input type="email" class="form__input" name="email" placeholder="E-mail" required>
-          <span class="form__error-text email-input-text">ааааа</span>
-          <input type="text" class="form__input" name="phone" placeholder="Номер телефона" required>
-          <span class="form__error-text phone-input-text">ааааакпофщоыщуу</span>
-          <button class="form__button" type="submit" disabled>Sign me in!</button>
-        </form>
-      </div>
-      <span class="form__complition">Мы с тобой свяжемся!&#128156;</span>
-    </div>
-  </div>
-  <script type="module" src="./script.js"></script>
-</body>
 
-</html>
+
