--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
       <h1 class="invitation__title section__title">You're invited</h1>
       <div class="invitation__text-container">
         <p class="invitation__main-paragraph main-paragraph">
-          Никита и Ангелина  <br> Приглашаем вас  на наше торжество.</p>
+          Дорогие гости  <br> Приглашаем Вас разделить с нами рвдость осбенного для нас события .</p>
       </div>
 
-      <p class="invitation__main-paragraph main-paragraph">В ночь с 28 на 10 июля ты сможешь отдаться ритамам synthwave,
-        techno и new wave, попробовать авторские коктейли от Anthony Davydoff, встретить старых знакомых и узнать о себе
-        больше.</p>
+      <p class="invitation__main-paragraph main-paragraph">Когда ?
+      </p>
+      <p>
+        28 Сентября
+      </p>
     </section>
 
     <section class="photo-grid">
@@ -41,7 +43,7 @@
     </section>
     <section class="plan">
       <h2 class="plan__title section__title">What's the plan?</h2>
-      <p class="plan__main-paragraph main-paragraph">Начало 9 июля 23:00</p>
+      <p class="plan__main-paragraph main-paragraph">Начало 28 сентября в 16.00</p>
       <p class="plan__main-paragraph main-paragraph">DC/FC</p>
       </p>
       <ul class="cards">
@@ -53,7 +55,7 @@
           </div>
         </li>
         <li class="cards__item">
-          <img src="./images/alec-favale-MZJOBxOXbt0-unsplash (1).jpg" alt="" class="cards__image">
+          <img src="IMG_2370.JPG" alt="" class="cards__image">
           <div class="cards__overlay">
             <h3 class="cards__header">01:00</h3>
             <p class="cards__main-text">Субботний рейв с MonicaR</p>
@@ -71,10 +73,10 @@
     </section>
     <section class="location">
       <h2 class="location__title section__title">Location</h2>
-      <p class="location__main-paragraph main-paragraph">St.Petersburg</p>
-      <p class="location__main-paragraph main-paragraph">Набережная Обводного канала 136, loft place</p>
+      <p class="location__main-paragraph main-paragraph">Город Курск Ресторан NORDAN</p>
+      <p class="location__main-paragraph main-paragraph">Дубовая ул., 1, д. Татаренкова</p>
       <button class="location__im-in-button im-in-button">Now I'm totally in!</button>
-      <img src="./images/artem-bryzgalov-cEeyvWbBzmc-unsplash (1).jpg" alt="" class="location__pic">
+      <img src=".img_1.png" alt="" class="location__pic">
 
     </section>
   </main>
