--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
           Дорогие гости  <br> Приглашаем Вас разделить с нами рвдость осбенного для нас события .</p>
       </div>
 
-      <p class="invitation__main-paragraph main-paragraph">Когда ?
-      </p>
+
       <p>
         28 Сентября
       </p>
@@ -76,7 +75,8 @@
       <p class="location__main-paragraph main-paragraph">Город Курск Ресторан NORDAN</p>
       <p class="location__main-paragraph main-paragraph">Дубовая ул., 1, д. Татаренкова</p>
       <button class="location__im-in-button im-in-button">Now I'm totally in!</button>
-      <img src=".img_1.png" alt="" class="location__pic">
+      <img src="./images/img_1.png" alt="Место проведения торжества" class="location__pic">
+
 
     </section>
   </main>
