--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1 class="invitation__title section__title">You're invited</h1>
       <div class="invitation__text-container">
         <p class="invitation__main-paragraph main-paragraph">
-          Дорогие гости  <br> Приглашаем Вас разделить с нами рвдость осбенного для нас события .</p>
+          Дорогие гости  <br> Приглашаем Вас разделить с нами радость осбенного для нас события .</p>
       </div>
 
 
@@ -32,39 +32,35 @@
     <section class="photo-grid">
       <h2 class="photo-grid__title section__title">Inspiration</h2>
       <div class="photo-grid__container">
-        <img src="./images/corey-saldana-TFtyWvy31i4-unsplash (1) (1).jpg" alt="Девушки в стиле киберпанк" class="photo-grid__item">
-        <img src="./images/donny-jiang-kgtgmExJ4jk-unsplash (1) (1).jpg" alt="Девушка в стильных очках" class="photo-grid__item">
-        <img src="./images/h-heyerlein-ndja2LJ4IcM-unsplash (1) (1).jpg" alt="Девушка в неоновой краске" class="photo-grid__item">
-        <img src="./images/alexander-london-lx9RWIg1Rdg-unsplash (1) (1).jpg" alt="Мужчина в шляпе" class="photo-grid__item">
-        <img src="./images/aleksandr-popov-vCbKwN2IXT4-unsplash.jpg" alt="Неоновая вечеринка" class="photo-grid__item">
-        <img src="./images/wilmer-martinez-Lme2Ye2jVo8-unsplash (1) (1).jpg" alt="Девушка в терминаторских очках" class="photo-grid__item">
+        <img src="./images/img.png" alt="Никита и Ангелина" class="photo-grid__item">
+
       </div>
     </section>
     <section class="plan">
       <h2 class="plan__title section__title">What's the plan?</h2>
       <p class="plan__main-paragraph main-paragraph">Начало 28 сентября в 16.00</p>
-      <p class="plan__main-paragraph main-paragraph">DC/FC</p>
+      <p class="plan__main-paragraph main-paragraph">Стиль Гэтсби</p>
       </p>
       <ul class="cards">
         <li class="cards__item">
-          <img src="./images/norbert-toth-Ny5gvGTi_d0-unsplash (1).jpg" alt="" class="cards__image">
+          <img src="./images/img_2.png" alt="" class="cards__image">
           <div class="cards__overlay">
             <h3 class="cards__header">00:00</h3>
-            <p class="cards__main-text">Супер-джем от Sergey S.</p>
+            <p class="cards__main-text">Образы для мужчин</p>
           </div>
         </li>
         <li class="cards__item">
-          <img src="IMG_2370.JPG" alt="" class="cards__image">
+          <img src="./images/img_3.png" alt="" class="cards__image">
           <div class="cards__overlay">
             <h3 class="cards__header">01:00</h3>
-            <p class="cards__main-text">Субботний рейв с MonicaR</p>
+            <p class="cards__main-text">Образы для женшин </p>
           </div>
         </li>
         <li class="cards__item">
-          <img src="./images/mukul-kumar-qNfOG2a4bIY-unsplash (1) (1).jpg" alt="" class="cards__image">
+          <img src="./images/img_4.png" alt="" class="cards__image">
           <div class="cards__overlay">
             <h3 class="cards__header">02:30</h3>
-            <p class="cards__main-text">Взрывное techno под визуальную инсталляцию от Maracush</p>
+            <p class="cards__main-text">Общий образ </p>
           </div>
         </li>
       </ul>
