--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ivitation</title>
-  <link rel="shortcut icon" href="./images/iconmonstr-triangle-lined.svg" type="image/x-icon">
+
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,6 +33,8 @@
       <h2 class="photo-grid__title section__title">Inspiration</h2>
       <div class="photo-grid__container">
         <img src="./images/img.png" alt="Никита и Ангелина" class="photo-grid__item">
+        <img src="./images/img_5.png" alt="Никита и Ангелина" class="photo-grid__item">
+        <img src="./images/img_6.png" alt="Никита и Ангелина" class="photo-grid__item">
 
       </div>
     </section>
